# LightGameEngine

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
include/LightGameEngine/: Application.hpp
scripts/: configure.bat
src/: main.cpp
